feat(mitra): kode wilayah + cek ketersediaan + kode tampil penuh
